# ClubHEI-Back/src/main/java/com/example/clubheidemo/model/Student.java
@@ -1,0 +1,62 @@
+package com.example.clubheidemo.model;
+
+
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Data;
+import lombok.EqualsAndHashCode;
+import lombok.NoArgsConstructor;
+import lombok.ToString;
+
+import java.io.Serializable;
+
+import javax.persistence.Column;
+import javax.persistence.Entity;
+import javax.persistence.EnumType;
+import javax.persistence.Enumerated;
+import javax.persistence.GeneratedValue;
+import javax.persistence.GenerationType;
+import javax.persistence.Id;
+import javax.persistence.JoinColumn;
+import javax.persistence.ManyToOne;
+import javax.persistence.Table;
+
+@Data
+@AllArgsConstructor
+@NoArgsConstructor
+@ToString
+@Builder
+@EqualsAndHashCode
+@Table(name = "\"student\"")
+@Entity
+
+public class Student implements Serializable{
+
+    public enum Gender{
+        F,
+        M
+    }
+
+    @Id
+    @GeneratedValue(strategy = GenerationType.IDENTITY)
+    private Long id;
+    @Column(nullable = false, unique = true)
+    private String ref;
+    @Column(name = "first_name", nullable = false)
+    private String firstName;
+    @Column(name = "last_name", nullable = false)
+    private String lastName;
+    @Column(nullable = false, unique = true)
+    private String email;
+
+    @Enumerated(EnumType.STRING)
+    private Gender gender;
+    
+    @ManyToOne
+    @JoinColumn(name = "groups_id", nullable = false)
+    private Groups groups; 
+
+    @ManyToOne
+    @JoinColumn(name = "club_id")
+    private Club club; 
+}
